<resources>
    <string name="app_name">Contactos</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Nombre">Nombre</string>
    <string name="informacion_de_contacto">Informacion de contacto</string>
    <string name="nuevo_contacto">Nuevo Contacto</string>
    <string name="numero">Número</string>
    <string name="nuevo">Nuevo</string>
    <string name="email">Email</string>
    <string name="detalle_contacto">Detalle de Contactos</string>
    <string name="SomeWrong">Algo anda mal</string>
    <string name="PickImage">No ha seleccionado una imagen</string>
    <string name="ShareFrag">Share</string>
    <string name="NombreFrag">Nombre:</string>
    <string name="EmailFrag">Email:</string>
    <string name="TelFrag">Numero:</string>
    <string name="Enviando">Enviando Email…</string>
    <string name="normal">Contactos</string>
    <string name="favoritos">Favoritos</string>
    <string name="HomeReturn">Home</string>
    <string name="MobileReturn">Mobile</string>
    <string name="WorkReturn">Work</string>
    <string name="OtherReturn">Other</string>
    <string name="CustomReturn">Custom</string>
    <string name="GrantPhone">Aún no se muestran los nombres</string>
    <string name="search">Buscar…</string>
    <string name="search_title">Buscar</string>
    <string-array name="type_phone">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
</resources>
